--- a/solution_folder/c2d_deployment_configuration.json
+++ b/solution_folder/c2d_deployment_configuration.json
@@ -1,6 +1,6 @@
 {
   "defaultDeploymentType": "MULTI_VM",
-  "imageName": "condor-submit-centos7-v8-8-1",
+  "imageName": "condor-submit-v2-0-0",
   "projectId": "kbatch-public",
   "templateName": "nonexistent_template",
   "useSolutionPackage": true
